# ChaosLab

./: .gitignore  Build.ps1  BuildAndRun.ps1  BuildApps.ps1  BuildKernelAndProtocols.ps1  BuildProtocols.ps1  CLAUDE.md  ChaosLab.code-workspace  ChaosLab.sln  ChaosV2.txt  IDLCompiler.sln  Protocols.xlsx  README.md  Run.ps1  Storm.sln  Structure.pptx  TODO.md  chaos IPC.txt  nya tankar.txt  startup.list
Application/Cluido/: Cargo.toml
Application/Cluido/src/: main.rs
Core/: ASSERT.cs  Core.csproj  Enumerator.cs  Error.cs  ErrorOr.cs  Handle.cs  Process.cs  Service.cs  ServiceDescription.cs  SyscallHelpers.cs  Syscalls.cs
DebugHost/: Program.cs
Documentation/: Protocols.xlsx  Structure.pptx  kernel API.txt  scheduling.md
Experiments/Application/Test/: Cargo.toml
Experiments/Experiment/HocusPocus/: Cargo.toml
Experiments/Server/Test/: Cargo.toml
HostServer/Console/: Cargo.toml
HostServer/Console/src/: application.rs  dirty_patches.rs  font.rs  helpers.rs  main.rs  state.rs
HostServer/Filesystem/: Cargo.toml
HostServer/Filesystem/src/: application.rs  main.rs
IDLCompiler/: CallEmitter.cs  CasedString.cs  ChannelGenerator.cs  ClientServerEmitter.cs  ClientServerGenerator.cs  Common.cs  CommonEmitter.cs  EnumList.cs  Field.cs  HandlerEmitter.cs  IDL.cs  IDLCall.cs  IDLCompiler.sln  IDLType.cs  IteratorTypeEmitter.cs  Program.cs  SourceGenerator.cs  StructuredWriter.cs  TypeEmitter.cs  TypeGenerator.cs
IDLCompiler/Properties/: launchSettings.json
IDLCompiler2/: CallGenerator.cs  CasedString.cs  EnumGenerator.cs  IDL.cs  Program.cs  SourceGenerator.cs  TypeGenerator.cs
IDLCompiler2/Properties/: launchSettings.json
IDLCompiler3/: ChannelGenerator.cs  EnumGenerator.cs  EnumList.cs  IDL.cs  IDLCall.cs  IDLField.cs  IDLProtocol.cs  IDLType.cs  Program.cs  SourceGenerator.cs  TypeGenerator.cs
ListFiles/: Application.cs  ListFiles.csproj  _Entry.cs
Protocol/Console/: Cargo.toml  Console.IDL.json
Protocol/Console/src/: lib.rs  (+4 more)
Protocol/Data/: Cargo.toml  Console.IDL.json  Data.IDL.json
Protocol/Filesystem/: Cargo.toml  Filesystem.IDL.json
Protocol/Storage/: Cargo.toml  Storage.IDL.json
Protocol/Tornado/: Cargo.toml  Tornado.IDL.json
RustStorm/: Cargo.toml  build.rs
RustStorm/.cargo/: config.toml
RustStorm/kernel/: Cargo.toml  build.rs
RustStorm/kernel/.cargo/: config.toml
RustStorm/kernel/src/: address_space.rs  ap_trampoline.rs  apic.rs  framebuffer.rs  gdt.rs  interrupts.rs  kernel_memory.rs  log.rs  main.rs  memory_setup.rs  page_tables.rs  panic.rs  physical.rs  physical_memory.rs  process.rs  qemu.rs  scheduler.rs  serial.rs  virtual_memory.rs
RustStorm/kernel/src/asm/: ap_trampoline.asm
Server/Root/: Cargo.toml
Server/Tornado/: Cargo.toml
Server/Tornado/src/: application.rs  main.rs  state.rs
Storm/: Error.cs  Events.cs  Handles.cs  Kernel.cs  Output.cs  Process.cs  Program.cs  Services.cs  Storm.csproj  Storm.sln  StormUI.Designer.cs  StormUI.cs  SyscallHandlers.cs  SyscallHelpers.cs  _Entry.cs
Storm/Core/: Channel.cs  Core.csproj  ErrorOr.cs  Handle.cs  Optional.cs  Process.cs  Service.cs  SyscallHelpers.cs
Storm/DebugHost/: Program.cs
Storm/Storm/: ASSERT.cs  Capability.cs  Error.cs  ErrorCode.cs  ErrorOr.cs  Event.cs  Events.cs  Handle.cs  HandleAction.cs  HandleCollection.cs  Handles.cs  Kernel.cs  Optional.cs  Output.cs  Process.cs  ProcessEmitType.cs  Service.cs  ServiceCollection.cs  ServiceSubscription.cs  Services.cs  StartupCommand.cs  Storm.csproj  SyscallHandlers.cs  SyscallHelpers.cs  SyscallNumber.cs  Syscalls.cs  TimerCollection.cs
Storm/StormHost/: Program.cs  StormHost.csproj
VFS/: Directory.cs  DirectoryPath.cs  File.cs  FileHandle.cs  FilePath.cs  Item.cs  VFS.csproj  VFSClient.cs  VFS_IDL.json
VFS/IPC/: GetFileInfoCall.cs  ListFilesCall.cs  VFS.cs  VFS_IDL.json
VFSServer/: Application.cs  VFSServer.csproj  _Entry.cs
VFSServer/IPC/: FileInfo.cs
bare_metal/: Cargo.toml  build.rs
bare_metal/applications/test/: Cargo.toml
bare_metal/applications/test/src/: main.rs
bare_metal/libraries/chaos/: Cargo.toml
bare_metal/libraries/chaos/src/: lib.rs
bare_metal/src/: main.rs
bare_metal/storm/: Cargo.toml  build.rs
bare_metal/storm/src/: address_space.rs  apic.rs  framebuffer.rs  gdt.rs  interrupts.rs  kernel_memory.rs  log.rs  main.rs  page_tables.rs  panic.rs  process.rs  scheduler.rs  syscall.rs  virtual_memory.rs
bare_metal/storm/src/arch/: mod.rs
bare_metal/storm/src/arch/aarch64/: mod.rs
bare_metal/storm/src/arch/riscv64/: mod.rs
bare_metal/storm/src/arch/x86_64/: ap_trampoline.rs  apic.rs  interrupts.rs  memory_setup.rs  mod.rs  page_tables.rs  qemu.rs  syscall.rs  timer.rs
bare_metal/storm/src/scheduler/: idle.rs  mod.rs  run_queue.rs  state.rs  task.rs  task_mutex.rs  timer_queue.rs
rust/chaos-core/: Cargo.toml
rust/direcory-list/: Cargo.toml
(+347 files in other folders)
