[package]
name = "rust_storm"
version = "0.1.0"
edition = "2021"
default-run = "qemu-uefi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ "kernel" ]

[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = { path = "../../bootloader", features = ["identity_map"]}
# bootloader = { path = "../../bootloader" }
