[package]
name = "cluido"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
library_chaos = { path = "../../Library/Chaos" }
protocol_data = { path = "../../Protocol/Data" }
protocol_filesystem = { path = "../../Protocol/Filesystem" }

