[package]
name = "hostserver_console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
library_chaos = { path = "../../Library/Chaos" }
protocol_console = { path = "../../Protocol/Console" }
uuid = { version = "0.8.2", features = ["v4"] }

[dependencies.sdl2]
version = "*"
default-features = false
features = ["ttf"]