[package]
name = "hostserver_filesystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
library_chaos = { path = "../../Library/Chaos" }
protocol_filesystem = { path = "../../Protocol/Filesystem" }
uuid = { version = "0.8.2", features = ["v4"] }
glob = { version = "0.3.1" }
