[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
#bootloader_api = { path = "../../../bootloader/api", features = ["identity_map"] }
bootloader_api = { path = "../../../bootloader/api" }
x86_64 = "*"
uart_16550 = "*"
x2apic = "*"
spin = "*"
lazy_static = { version = "*", features = ["spin_no_std"] }
elf_rs = "*"
acpi = { version = "*", default-features = false }
raw-cpuid = "*"
derivative = { version = "*", features = ["use_core"] }
