[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bootloader_api = "0.11.15"
x86_64 = "0.15.4"
uart_16550 = "0.6.0"
x2apic = "0.5.0"
spin = "0.10.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
elf_rs = "0.3.1"
acpi = { version = "6.1.1", default-features = false }
raw-cpuid = "11.6.0"
derivative = { version = "2.2.0", features = ["use_core"] }
noto-sans-mono-bitmap = "0.2.0"
