[package]
name = "storm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "storm"
test = false
bench = false

[dependencies]
bootloader_api = "0.11.15"
x86_64 = "0.15.4"
uart_16550 = "0.6.0"
x2apic = "0.5.0"
spin = { version = "0.10.0", features = ["lock_api"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
elf_rs = "0.3.1"
acpi = { version = "6.1.1", default-features = false }
raw-cpuid = "11.6.0"
derivative = { version = "2.2.0", features = ["use_core"] }
noto-sans-mono-bitmap = "0.2.0"
talc = "5.0.3"
